Version 0.8-1 (2016-12-22)

* Added SnowMap()
* fixed Snow.pumps data:  label should be character, not a factor; added missing labels for pumps 1:2
* SnowMap now uses asp=1

Version 0.8-0 (2016-12-07)

*  Added HalleyLifeTable
*  Added Cholera data from Farr 1852 [thx: Neville Verlander]
*  Correction to ZeaMays.Rd [thx: Bryan Clair]
*  Add Suggests: effects for effect plots for some examples.
*  Added Snow.dates -- deaths by date from Aug 19 -- Sept 30, 1854
*  Substantially revised examples in Snow.Rd to make plots more flexible. SnowMap()
   should be a function in the package and made more general, but this is not yet done.

Version 0.7-8 (2016-04-13)

  Fix web links again
  
Version 0.7-7 (2016-04-09)

  Added vignettes/Snow_deaths and data/Snow.deaths2 [Thx: Peter Li]
  Fixed web links to make curl happy

Version 0.7-6 (2015-10-13)

  Added Armada data [thx: Antoine de Falguerolles]

Version 0.7-4 (2013-10-29)

	Added reference to agridat package
	Fixed Nightingale.Rd examples to avoid obscuring some segments by overplotting [thx: Monique Graf].  

Version 0.7-3 (2013-08-20)

	Cosmetic: fix long lines in .Rd files

Version 0.7-2

	Extended Nightingale examples

Version 0.7-1

	CushnyPebbles renamed to proper spelling, CushnyPeebles (thx: Ian E. Holliday)
	Removed Suggests: ReadImages; for now, retain old code examples as \dontrun{}
	Extended GaltonFamilies examples

Version 0.7-0

	Revised Langren.Rd examples to replace ReadImage with jpeg

Version 0.6-14 (2012-12-01)

	Extended examples for Playfair Wheat
	Replaced original data(Wheat) on 26 intervals with a new version at 53 time points
	  and a separate data.frame, Wheat.monarchs giving the reigns. Updated examples to
	  more closely approximate Playfair's original and a revision.

Version 0.6-13 (2011-11-03)

	Added GaltonFamilies data
	Fixed deprecated warnings from ggplot2

Version 0.6-12 (2011-10-12)

	Added CushnyPebbles data
	Extended examples for Michelson and CushnyPebbles