@@ -3,6 +3,7 @@ Version 0.8-1 (2016-12-22)
 * Added SnowMap()
 * fixed Snow.pumps data:  label should be character, not a factor; added missing labels for pumps 1:2
 * SnowMap now uses asp=1
+* Replaced Snow.polygons with new version consisting of actual vertices of the polygons surrounding each pump.
 
 Version 0.8-0 (2016-12-07)
 
